# Praxis

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  AUDIT_REMEDIATION_EXECUTION_GOALS.md  CHANGELOG.md  CLAUDE.md  Package.swift  README.md  REFACTOR_SWIFT_WORKORDER.md  SWIFT_ARCHITECTURE.md  SWIFT_OBJECT_ARCHITECTURE_PLAN.md  SWIFT_REFACTOR_PLAN.md  SWIFT_TARGET_EXECUTION_PLAN.md  TAKEOVER_EXECUTION_WORKFLOW.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: swift-ci.yml
Examples/PraxisAppleHostEmbeddingExample/: main.swift
Examples/PraxisRuntimeKitCapabilitiesExample/: main.swift
Examples/PraxisRuntimeKitCmpTapExample/: main.swift
Examples/PraxisRuntimeKitDurableRuntimeExample/: main.swift
Examples/PraxisRuntimeKitSmoke/: main.swift
Sources/PraxisAppleUI/: PraxisAppleUI.swift  PraxisAppleUIModels.swift  PraxisAppleUIStores.swift
Sources/PraxisCLI/: PraxisCLIControllers.swift  PraxisCLIModels.swift  main.swift
Sources/PraxisCapabilityCatalog/: PraxisCapabilityCatalog.swift  PraxisCapabilityCatalogModels.swift  PraxisCapabilityCatalogServices.swift  PraxisCapabilityCatalogThinBaseline.swift
better-agent/core/bindings/node/: CMakeLists.txt  agent_core_napi.cpp
better-agent/core/bindings/node/tests/: memory_smoke.js
docs/: PraxisCapabilityGuide.md  PraxisClosureAudit.md  PraxisDemoHost.md  PraxisEvaluationChecklist.md  PraxisFFICompatibility.md  PraxisHighRiskCapabilitySafety.md  PraxisMigrationNotes.md  PraxisPlatformStatus.md  PraxisPositioning.md  PraxisPreviewReleaseChecklist.md  PraxisPreviewReleaseEvidence.md  PraxisPreviewReleaseNote.md  PraxisQuickStart.md  PraxisReleasePolicy.md  PraxisRepositoryBaseline.md  PraxisSearchChainGuide.md  PraxisSupportMatrix.md  master.md
memory/: README.md  compaction-handoff-prompt-five-agent.md  current-context.md
scripts/: raxode-dev.mjs  refactor-test-gates.mjs
src/: index.ts  raxcode-cli.test.ts  raxcode-cli.ts  raxcode-config.test.ts  raxcode-config.ts  raxode-startup-splash.test.ts  raxode-startup-splash.ts  runtime-paths.ts
(+768 files in other folders)
